--- a/package.json
+++ b/package.json
@@ -27,9 +27,6 @@
     "vue": "^3.5.13",
     "vue-cropper": "^1.1.4",
     "vue-echarts": "^7.0.3",
-    "vue-router": "^4.5.0"
-  },
-  "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/file-saver": "^2.0.7",
     "@types/node": "^22.13.9",
@@ -43,6 +40,9 @@
     "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
-    "vue-tsc": "^2.2.8"
+    "vue-tsc": "^2.2.8",
+    "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
   }
 }
