--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "ant-design-vue": "^4.2.6",
+    "@tsconfig/node22": "^22.0.0",
     "axios": "^1.8.4",
     "echarts": "^5.6.0",
     "echarts-wordcloud": "^2.1.0",
@@ -27,7 +28,9 @@
     "vue": "^3.5.13",
     "vue-cropper": "^1.1.4",
     "vue-echarts": "^7.0.3",
-    "@tsconfig/node22": "^22.0.0",
+    "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
     "@types/file-saver": "^2.0.7",
     "@types/node": "^22.13.9",
     "@umijs/openapi": "^1.13.0",
@@ -40,9 +43,6 @@
     "npm-run-all2": "^7.0.2",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
-    "vue-tsc": "^2.2.8",
-    "vue-router": "^4.5.0"
-  },
-  "devDependencies": {
+    "vue-tsc": "^2.2.8"
   }
 }
